Apply Siteflow branding to extension and plugin

--- a/siteflow-figma/src/ui.html
+++ b/siteflow-figma/src/ui.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DOM to Figma Importer</title>
+  <title>Siteflow Figma Importer</title>
   <style>
     * {
       box-sizing: border-box;
