--- a/siteflow-capture/popup.html
+++ b/siteflow-capture/popup.html
@@ -2,63 +2,190 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <title>Siteflow Capture</title>
     <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
         body {
-            width: 250px;
-            padding: 16px;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            background-color: #f9fafb;
+            width: 320px;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #1a1a2e 0%, #16213e 50%, #0f3460 100%);
+            color: #ffffff;
+            padding: 20px;
+            min-height: 200px;
         }
 
-        h2 {
-            margin: 0 0 12px 0;
-            font-size: 16px;
-            color: #111827;
+        .container {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
         }
 
-        p {
-            margin: 0 0 16px 0;
-            font-size: 13px;
-            color: #6b7280;
-            line-height: 1.4;
+        .header {
+            text-align: center;
+            margin-bottom: 8px;
+        }
+
+        .logo {
+            width: 48px;
+            height: 48px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0 auto 12px;
+            box-shadow: 0 8px 32px rgba(102, 126, 234, 0.3);
+        }
+
+        .logo svg {
+            width: 28px;
+            height: 28px;
+            fill: white;
+        }
+
+        h1 {
+            font-size: 18px;
+            font-weight: 700;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            margin-bottom: 4px;
+        }
+
+        .subtitle {
+            font-size: 12px;
+            color: rgba(255, 255, 255, 0.6);
         }
 
         button {
             width: 100%;
-            padding: 10px;
-            background: linear-gradient(135deg, #10B981 0%, #059669 100%);
-            color: white;
+            padding: 12px;
             border: none;
-            border-radius: 6px;
+            border-radius: 10px;
+            font-size: 14px;
             font-weight: 600;
             cursor: pointer;
-            font-size: 14px;
-            transition: opacity 0.2s;
+            transition: all 0.2s ease;
         }
 
-        button:hover {
-            opacity: 0.9;
+        /* Primary Button */
+        #exportBtn {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            box-shadow: 0 4px 16px rgba(102, 126, 234, 0.3);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
         }
 
+        #exportBtn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 8px 24px rgba(102, 126, 234, 0.4);
+        }
+
+        #exportBtn:active {
+            transform: translateY(0);
+        }
+
+        #exportBtn:disabled {
+            opacity: 0.6;
+            cursor: wait;
+            transform: none;
+        }
+
+        /* Status Pills */
         #status {
-            margin-top: 12px;
+            padding: 10px 12px;
+            border-radius: 8px;
             font-size: 12px;
-            color: #059669;
             display: none;
-            text-align: center;
+            align-items: center;
+            gap: 8px;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            text-align: left;
         }
 
-        .error {
-            color: #dc2626 !important;
+        #status.show {
+            display: flex;
+        }
+
+        #status.success {
+            background: rgba(34, 197, 94, 0.15);
+            border-color: rgba(34, 197, 94, 0.3);
+            color: #4ade80;
+        }
+
+        #status.error {
+            background: rgba(239, 68, 68, 0.15);
+            border-color: rgba(239, 68, 68, 0.3);
+            color: #f87171;
+        }
+
+        #status.loading {
+            background: rgba(59, 130, 246, 0.15);
+            border-color: rgba(59, 130, 246, 0.3);
+            color: #60a5fa;
+        }
+
+        .spinner {
+            width: 14px;
+            height: 14px;
+            border: 2px solid currentColor;
+            border-top-color: transparent;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+        }
+
+        @keyframes spin {
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Footer */
+        .footer {
+            margin-top: 16px;
+            pt: 16px;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            text-align: center;
+            font-size: 10px;
+            color: rgba(255, 255, 255, 0.3);
         }
     </style>
 </head>
 
 <body>
-    <h2>Figma Exporter</h2>
-    <p>Export the current page content to JSON for Figma.</p>
-    <button id="exportBtn">Export Page</button>
-    <div id="status"></div>
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12 2L2 7v10l10 5 10-5V7L12 2zM4 8.5l8 4v8l-8-4v-8zm16 0v8l-8 4v-8l8-4zm-8 2.5L5.5 7 12 3.5 18.5 7 12 11z" />
+                </svg>
+            </div>
+            <h1>Siteflow Capture</h1>
+            <p class="subtitle">Export current page to Figma</p>
+        </div>
+
+        <button id="exportBtn">
+            <span>Export Page</span>
+        </button>
+
+        <div id="status"></div>
+
+        <div class="footer">
+            Siteflow v1.0
+        </div>
+    </div>
     <script src="popup.js"></script>
 </body>
 
