Enhance UI guides and naming

--- a/siteflow-capture/popup.html
+++ b/siteflow-capture/popup.html
@@ -183,7 +183,7 @@
         <div id="status"></div>
 
         <div class="footer">
-            Siteflow v1.0
+            Next: Import JSON with <strong>Siteflow Figma</strong> plugin
         </div>
     </div>
     <script src="popup.js"></script>
