--- a/siteflow-figma/src/ui.html
+++ b/siteflow-figma/src/ui.html
@@ -383,7 +383,7 @@
             d="M12 2L2 7v10l10 5 10-5V7L12 2zM4 8.5l8 4v8l-8-4v-8zm16 0v8l-8 4v-8l8-4zm-8 2.5L5.5 7 12 3.5 18.5 7 12 11z" />
         </svg>
       </div>
-      <h1>DOM to Figma Importer</h1>
+      <h1>Siteflow Importer</h1>
       <p class="subtitle">Import multiple JSON slides into Figma</p>
     </div>
 
@@ -426,10 +426,12 @@
     <div class="tips">
       <div class="tips-title">Tips</div>
       <ul class="tips-list">
-        <li>Export JSON from your DOM-to-Figma tool first</li>
-        <li>Select multiple files to import all slides at once</li>
-        <li>Slides will be arranged horizontally with spacing</li>
-      </ul>
+        <div class="tips-title">Workflow</div>
+        <ul class="tips-list">
+          <li>1. Install <strong>Siteflow Capture</strong> extension</li>
+          <li>2. Click extension to export webpage JSON</li>
+          <li>3. Drag & drop JSON file(s) here</li>
+        </ul>
     </div>
   </div>
 
