Rebrand to FDN Web ecosystem

--- a/fdn-web-capture/popup.html
+++ b/fdn-web-capture/popup.html
@@ -172,7 +172,7 @@
                         d="M12 2L2 7v10l10 5 10-5V7L12 2zM4 8.5l8 4v8l-8-4v-8zm16 0v8l-8 4v-8l8-4zm-8 2.5L5.5 7 12 3.5 18.5 7 12 11z" />
                 </svg>
             </div>
-            <h1>Siteflow Capture</h1>
+            <h1>FDN Web Capture</h1>
             <p class="subtitle">Export current page to Figma</p>
         </div>
 
@@ -183,7 +183,7 @@
         <div id="status"></div>
 
         <div class="footer">
-            Next: Import JSON with <strong>Siteflow Figma</strong> plugin
+            Next: Import JSON with <strong>FDN Web Intake</strong> plugin
         </div>
     </div>
     <script src="popup.js"></script>
