--- a/fdn-web-intake/src/ui.html
+++ b/fdn-web-intake/src/ui.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Siteflow Figma Importer</title>
+  <title>FDN Web Intake</title>
   <style>
     * {
       box-sizing: border-box;
@@ -383,7 +383,7 @@
             d="M12 2L2 7v10l10 5 10-5V7L12 2zM4 8.5l8 4v8l-8-4v-8zm16 0v8l-8 4v-8l8-4zm-8 2.5L5.5 7 12 3.5 18.5 7 12 11z" />
         </svg>
       </div>
-      <h1>Siteflow Importer</h1>
+      <h1>FDN Web Intake</h1>
       <p class="subtitle">Import multiple JSON slides into Figma</p>
     </div>
 
@@ -428,7 +428,7 @@
       <ul class="tips-list">
         <div class="tips-title">Workflow</div>
         <ul class="tips-list">
-          <li>1. Install <strong>Siteflow Capture</strong> extension</li>
+          <li>1. Install <strong>FDN Web Capture</strong> extension</li>
           <li>2. Click extension to export webpage JSON</li>
           <li>3. Drag & drop JSON file(s) here</li>
         </ul>
