Final rebranding cleanup: Update CONTRIBUTING and fix residual Siteflow refs

--- a/fdn-web-capture/popup.html
+++ b/fdn-web-capture/popup.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Siteflow Capture</title>
+    <title>FDN Web Capture</title>
     <style>
         * {
             box-sizing: border-box;
