--- a/fdn-web-capture/popup.html
+++ b/fdn-web-capture/popup.html
@@ -154,7 +154,7 @@
         /* Footer */
         .footer {
             margin-top: 16px;
-            pt: 16px;
+            padding-top: 16px;
             border-top: 1px solid rgba(255, 255, 255, 0.1);
             text-align: center;
             font-size: 10px;
